# 148-winter-2025-final-project-team-13

./: README.md  package.xml  setup.cfg  setup.py
gestures_lidar_integration/: gestures_controller_lidar.py
gestures_package/: gesture_controller.py  gesture_tracker.py
launch/: gesture_launch.launch.py
lidar_collision_avoidance/: CMakeList.txt  package.xml  setup.cfg  setup.py
lidar_collision_avoidance/launch/: combined_lidar_motor_launch.py  lidar_collision_avoidance_launch.py
lidar_collision_avoidance/lidar_collision_avoidance/: lidar_collision_avoidance_node.py
